--- a/miph.html
+++ b/miph.html
@@ -12,10 +12,10 @@
 				<div class="container">
 					<header id="header">
 						<div class="inner">
-							<h1><a href="../index.html" id="logo">ULegend</a></h1>
+							<h1><a href="/index.html/" id="logo">ULegend</a></h1>
 							<nav id="nav">
 								<ul>
-									<li><a href="/index.html/">Главная</a></li>
+									<li><a href="index.html">Главная</a></li>
 									<li><a class="current_page_item" href="miph.html">Мифология</a>
 										<ul>
 											<li><a href="Классыs/lavyane.html">Славянская</a>
